[gd_scene load_steps=11 format=3 uid="uid://dgicxq7ss2cqe"]

[ext_resource type="Script" path="res://entities/player/projectile.gd" id="1_c3bge"]
[ext_resource type="Texture2D" uid="uid://uap4y4l8s6hk" path="res://assets/laserRed01.png" id="2_owl0p"]
[ext_resource type="Texture2D" uid="uid://baihbi65o6q21" path="res://assets/projectile-animated.png" id="3_vseb6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuffk"]
size = Vector2(10, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2fa4"]
atlas = ExtResource("3_vseb6")
region = Rect2(0, 0, 192, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvkhb"]
atlas = ExtResource("3_vseb6")
region = Rect2(224, 0, 192, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmf1k"]
atlas = ExtResource("3_vseb6")
region = Rect2(448, 0, 192, 71)

[sub_resource type="SpriteFrames" id="SpriteFrames_byj02"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2fa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvkhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmf1k")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ro4vl"]
radius = 89.0225

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_542q1"]
bg_color = Color(0.6, 0.6, 0.6, 0.207843)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[node name="Projectile" type="Area2D" groups=["projectile", "projectiles"]]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_c3bge")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.11063e-06, 0)
rotation = 1.57079
shape = SubResource("RectangleShape2D_wuffk")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
rotation = 1.57079
scale = Vector2(0.324099, 0.604877)
texture = ExtResource("2_owl0p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.175, 0.175)
sprite_frames = SubResource("SpriteFrames_byj02")
autoplay = "default"
frame = 2
frame_progress = 0.57447

[node name="ChainRadius" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChainRadius"]
shape = SubResource("CircleShape2D_ro4vl")

[node name="Panel" type="Panel" parent="ChainRadius"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -91.0
offset_right = 91.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_542q1")

[node name="Line2D" type="Line2D" parent="."]
default_color = Color(0.219608, 1, 1, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="ChainRadius" to="." method="_on_chain_radius_body_entered"]
[connection signal="body_exited" from="ChainRadius" to="." method="_on_chain_radius_body_exited"]
